# mysql-tray-controller

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.1.md  SECURITY.md  UPGRADE.md  build.rs
.github/workflows/: ci.yml
scripts/: install.ps1  uninstall.ps1
src/: main.rs
