[package]
name = "mysql-tray-controller"
version = "1.0.0"
edition = "2026"
authors = ["Mohsen Manoochehr"]
description = "A lightweight native Windows tray app for monitoring and controlling MySQL and MariaDB services"
repository = "https://github.com/MohsenManoochehr/mysql-tray-controller"
homepage = "https://github.com/MohsenManoochehr/mysql-tray-controller"
readme = "README.md"
license = "MIT"
keywords = ["mysql", "mariadb", "windows", "tray", "service"]

[dependencies]
anyhow = "1.0"
tray-icon = "0.24.1"
winit = "0.30.12"
windows-service = "0.8.1"
winreg = "0.56.0"

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
